@@ -36,5 +36,6 @@ LINK_DIRECTORIES(${LIB_ATICALCL_PATH} ${LIB_ATICALRT_PATH} ${Boost_LIBRARY_DIRS}
 #ADD_DEFINITIONS(-Wall -O0 -g3)
 
 ADD_SUBDIRECTORY(examples)
+ADD_SUBDIRECTORY(regression)
 
 INSTALL( DIRECTORY "${CALPP_SOURCE_DIR}/include" DESTINATION . PATTERN "*~" )
